crates/solidity/testing/snapshots/bindings_output/contracts/constructor_modifier/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ConstantKeyword or Identifier or InternalKeyword or PrivateKeyword or PublicKeyword.
   ╭─[input.sol:7:17]
   │
 7 │     constructor (address _addr) validAddress(_addr) {}
   │                 ───────────────────┬───────────────────  
   │                                    ╰───────────────────── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── def: 1
 2 │     modifier validAddress(address _addr) {
   │              ──────┬─────         ──┬──  
   │                    ╰───────────────────── def: 2
   │                                     │    
   │                                     ╰──── def: 3
 3 │         require(_addr != address(0), "Not valid address");
   │         ───┬─── ──┬──  
   │            ╰─────────── unresolved
   │                   │    
   │                   ╰──── ref: 3
 4 │         _;
   │         ┬  
   │         ╰── unresolved
   │ 
 7 │     constructor (address _addr) validAddress(_addr) {}
   │     ─────┬─────  
   │          ╰─────── unresolved
───╯
